Fix modal appearance on safari

--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ h1 {
     grid-template-columns: 1fr;
     grid-template-rows: 250px repeat(3, 1fr);
     transition: all 0.5s ease-in-out;
+    ⁄
 }
 
 .book-card > * {
@@ -257,19 +258,13 @@ h1 {
 
 /*************** Remove book animation ***************/
 
-.book-remove {
-    opacity: 0;
-    transition: all 0.5s ease-out;
+.book-card.book-remove {
+    animation: fade-out 0.5s forwards;
 }
 
 /*************** Modal card ***************/
 
 .modal[open][closing] {
-    pointer-events: none;
-    animation: fade-out 0.5s forwards;
-}
-
-.modal[closing] {
     pointer-events: none;
     animation: fade-out 0.5s forwards;
 }
@@ -283,10 +278,9 @@ h1 {
     border-radius: 0.2rem;
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr; */
     transition: all 0.5s ease-in-out;
     z-index: 90;
 }
